--- a/lab/02_simple_linked_list/skel/Makefile
+++ b/lab/02_simple_linked_list/skel/Makefile
@@ -1,17 +1,17 @@
 CC=clang
-CFLAGS=-Wall -Wextra -pedantic -ansi
+CFLAGS=-Wall -Wextra -pedantic
 DEBUG=-g -ggdb -O0 -march=native
 
 build: TestLinkedList
 
 TestLinkedList: src/TestLinkedList.o src/LinkedList.o
-	$(CC) $(CFLAGS) $(DEBUG) src/TestLinkedList.o src/LinkedList.o -o TestLinkedList
+	$(CC) $(CFLAGS) src/TestLinkedList.o src/LinkedList.o -o TestLinkedList
 
 src/LinkedList.o: src/LinkedList.h src/LinkedList.c
-	$(CC) $(CFLAGS) $(DEBUG) src/LinkedList.c -c -o src/LinkedList.o
+	$(CC) $(CFLAGS) src/LinkedList.c -c -o src/LinkedList.o
 
 src/TestLinkedList.o: src/TestLinkedList.c
-	$(CC) $(CFLAGS) $(DEBUG) src/TestLinkedList.c -c -o src/TestLinkedList.o
+	$(CC) $(CFLAGS) src/TestLinkedList.c -c -o src/TestLinkedList.o
 
 run:
 	./TestLinkedList
