[lab03] solutions for the third lab of sd
- made functions which do operations on a
doubly circular linked list in the `CircularDoublyLinkedList.c`
file by getting a string as a command in the
`TestCircularDoublyLinkedList.c` file.

- here are the parameters:
a) create_str & create_int - create a list with a
specified data_size
b) add - add a node to the list at a given position;
c) remove - delete a node from a given position from list;
d) print - print the list
e) free  - free all the lists made

*) extra parameters:

a) reverse - reverse a given list || 311CAb
	(-) there is one more function which does
	the exact same thing, but you alloc memory
b) unique - remove duplicate from a list || 311CAa
c) create_sec - create a second list
d) sec_add - add nodes in the second list
e) sec_print - print the second list
f) sum - create a new list that is the sum of two lists || 312CAb
g) merge - merge two sorted circular doubly lists into another || 313CAa
h) less_than - move the nodes which have values smaller than a given one
	to the left of the list || 313CAb
i) remove_middle - remove the node from the middle
of a list || 314CAb
j) add_middle - add a node from the middle
of a list || 315CAa

--- a/lab/03_double_linked_list/skel/Makefile
+++ b/lab/03_double_linked_list/skel/Makefile
@@ -1,5 +1,5 @@
 CC=clang
-CFLAGS=-Wall -Wextra -pedantic -ansi
+CFLAGS=-Wall -Wextra
 DEBUG=-g -ggdb -O0 -march=native
 
 build: TestCircularDoublyLinkedList
