[lab04] added solutions for the lab

--- a/lab/04_hashmap/skel/Makefile
+++ b/lab/04_hashmap/skel/Makefile
@@ -1,21 +1,20 @@
 CC=clang
-CFLAGS=-Wall -Wextra -pedantic -ansi
+CFLAGS=-Wall -Wextra
 DEBUG=-g -ggdb -O0 -march=native
 
 build: TestHashtable
 
-TestHashtable: src/TestHashtable.o src/Hashtable_unlinked.o src/LinkedList.o
-	$(CC) $(CFLAGS) $(DEBUG) src/TestHashtable.o src/Hashtable_unlinked.o src/LinkedList.o -o TestHashtable
+TestHashtable: src/TestHashtable.o src/Hashtable.o src/LinkedList.o
+	$(CC) $(CFLAGS) src/TestHashtable.o src/Hashtable.o src/LinkedList.o -o TestHashtable
 
-
-src/Hashtable_unlinked.o: src/Hashtable.h src/Hashtable.c
-	$(CC) $(CFLAGS) $(DEBUG) src/Hashtable.c -c -o src/Hashtable_unlinked.o
+src/Hashtable.o: src/Hashtable.h src/Hashtable.c
+	$(CC) $(CFLAGS) src/Hashtable.c -c -o src/Hashtable.o
 
 src/LinkedList.o: src/LinkedList.h src/LinkedList.c
-	$(CC) $(CFLAGS) $(DEBUG) src/LinkedList.c -c -o src/LinkedList.o
+	$(CC) $(CFLAGS) src/LinkedList.c -c -o src/LinkedList.o
 
 src/TestHashtable.o: src/TestHashtable.c
-	$(CC) $(CFLAGS) $(DEBUG) src/TestHashtable.c -c -o src/TestHashtable.o
+	$(CC) $(CFLAGS) src/TestHashtable.c -c -o src/TestHashtable.o
 
 run:
 	./TestHashtable
@@ -23,4 +22,3 @@ run:
 clean:
 	rm src/*.o
 	rm TestHashtable
-
